--- a/app/assets/stylesheets/components/cards.scss
+++ b/app/assets/stylesheets/components/cards.scss
@@ -54,6 +54,9 @@
   border-radius: var(--radius-auto);
   background: var(--card-bg);
   box-shadow: 0 0 0 1px var(--card-border);
+
+  // overflow-wrap: anywhere isn't supported in Safari, in which case this fallback applies
+  overflow-wrap: break-word;
   overflow-wrap: anywhere;
 
   &__revealable {
